src/main/java/com/example/newspeed/global/error/UnauthorizedAccessException.java
package com.example.newspeed.global.error;

public class UnauthorizedAccessException extends RuntimeException {
    public UnauthorizedAccessException(String message) {
        super(message);
    }
}
